@@ -1,0 +1,3 @@
+<?php
+// referer to depfile_com.php
+?>
