@@ -25,7 +25,7 @@ class dl_rapidgator_net extends Download {
 	}
 	
     public function Leech($url) {
-		$data = $this->lib->curl($url,"lang=en;".$this->lib->cookie,"");
+		$data = $this->passredirect($this->lib->curl($url,"lang=en;".$this->lib->cookie,""),"lang=en;".$this->lib->cookie);
 		if(stristr($data, "You have reached quota of downloaded information") || stristr($data, "You have reached daily quota")) $this->error("LimitAcc");
 		elseif(stristr($data,'File not found</div>'))  $this->error("dead", true, false, 2);
 		elseif(preg_match('@https?:\/\/\w+\.rapidgator\.net\/\/\?r=download\/index[^"\'><\r\n\t]+@i', $data, $giay))
