@@ -26,7 +26,7 @@ require_once('class.php');
 $obj = new stream_get(); 
 $obj->using = $using;
 $obj->current_version = 93;
-$obj->ltt_version = 4;
+$obj->ltt_version = 5;
 $obj->msg = false;
 if (!empty($_COOKIE['msg'])) $obj->msg = htmlspecialchars($_COOKIE['msg']);
 setcookie('msg', '');
